@@ -1,20 +1,35 @@
 IDEAS
 =====
 
-- 'immutable' builder
+- 'immutable' builder?
 
 - some kind of obfuscator to reduce codebase size?? (function () { var a='Joose', b='Managed'; top[a][b] etc })()
 - try Closure compacter
+
+- rewrite the core in more functional style (should give noticable speed-up for class mutations, as there will be no 'deCompose' stage - 
+we'll just clear the prototype and the re-apply it from scratch)
+
+- "immutable traits" (should have name) - cache the derived meta-class, then re-use it, instead of re-creating for each instance
+   should give cheap "lightweight" traits
+
 
 
 TASKS
 =====
 
+- ability to freely inherit from non-Joose classes
+
+- inter-op with NodeJS
+
 - test Joose.O helpers
 
 - add exception for inheritance from nothing ( isa : null )
 - allow regexes as initialization values for advanced attributes
-- alias static methods (not properties) to the constructor (should be delegates to 'my')
+
+- alias static methods (not properties) to the constructor (should be delegates to 'my') 
+    Some.Class.method = function () { 
+        this.my.method.apply(this.my, arguments) 
+    }
 
 - derive 'stable' branch
 
@@ -25,10 +40,6 @@ TASKS
 - add warnings about SUPER on proto level in OPERA
 
 
-- fix JSAN shell 'install' command (prefix)
-
-- release Module::Build::Functions (CSJ)
-- release Module::JSAN
 
 
 DOCS
@@ -89,9 +100,6 @@ REFACTORING POSSIBILITIES
 EXTENSIONS
 ==========
 
-- JooseX.Attribute.Accessor.Unified - getter and setter as single function
-
-- JooseX.Class.Singleton; http://gist.github.com/243923
 
 - JooseX.Builder.Also (to address Rhino issues and allow multiple modifiers in the same class)
 
@@ -114,6 +122,11 @@ EXTENSIONS
 DONE
 ====
 
+- fix JSAN shell 'install' command (prefix)
+- release Module::Build::Functions (CSJ)
+- release Module::JSAN
+- JooseX.Attribute.Accessor.Unified - getter and setter as single function
+- JooseX.Class.Singleton; http://gist.github.com/243923
 - if (this.hasAttribute('builderClass')) this.getBuiderTarget() - to create a separate builder class for each metaclass
 - + stem
 - needs a test
