@@ -1,8 +1,10 @@
 Joose = function () { throw "Modules may not be instantiated." }
 
-Joose.top = this
+Joose.top           = this
 
-Joose.VERSION = 3.007
+Joose.VERSION       = 3.007
+Joose.AUTHORITY     = 'jsan:NPLATONOV'
+
 
 // Static helpers for Arrays
 Joose.A = {
