@@ -13,12 +13,16 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
     isDetached                  : false,
     firstPass                   : true,
     
+    // a special instance, which, when passed as 1st argument to constructor, signifies that constructor should
+    // skips traits processing for this instance
     skipTraitsAnchor            : {},
     
     
     //build for metaclasses - collects traits from roles
     BUILD : function () {
-        var props = Joose.Managed.Class.superClass.BUILD.apply(this, arguments)
+        var sup = Joose.Managed.Class.superClass.BUILD.apply(this, arguments)
+        
+        var props   = sup.__extend__
         
         var traits = Joose.O.wantArray(props.trait || props.traits || [])
         delete props.trait
@@ -28,35 +32,56 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
             var role = (arg.meta instanceof Joose.Managed.Class) ? arg : arg.role
             
             if (role.meta.meta.isDetached) traits.push(role.meta.constructor)
-        }, this)
+        })
         
         if (traits.length) props.traits = traits 
         
-        return props
+        return sup
     },
     
     
+    initInstance : function (instance, props) {
+        Joose.O.each(this.attributes, function (attribute, name) {
+            
+            if (attribute instanceof Joose.Managed.Attribute) 
+                attribute.initFromConfig(instance, props)
+            else 
+                if (props.hasOwnProperty(name)) instance[name] = props[name]
+        })
+    },
+    
+    
+    // we are using the same constructor for usual and meta- classes
     defaultConstructor: function () {
         return function (skipTraitsAnchor, params) {
-            var skipTraits = skipTraitsAnchor == this.meta.skipTraitsAnchor
+            var thisMeta    = this.meta
+            var skipTraits  = skipTraitsAnchor == thisMeta.skipTraitsAnchor
             
-            var props = this.BUILD.apply(this, skipTraits ? params : arguments)
+            var props   = this.BUILD.apply(this, skipTraits ? params : arguments)
+            // either looking for traits in __extend__ (meta-class) or in usual props (usual class)
+            var extend  = props.__extend__ || props
             
-            var traits = props.trait || props.traits
-            delete props.trait
-            delete props.traits
+            var traits = extend.trait || extend.traits
             
-            if ((traits || props.detached) && !skipTraits) {
-                delete props.detached
+            if (traits || extend.detached) {
+                delete extend.trait
+                delete extend.traits
+                delete extend.detached
                 
-                var classWithTrait = this.meta.subClassOf(this.constructor, { does : traits || [] })
-                var meta = classWithTrait.meta
-                meta.isDetached = true
-                
-                return meta.instantiate.call(meta, this.meta.skipTraitsAnchor, arguments)
+                if (!skipTraits) {
+                    var classWithTrait  = thisMeta.subClassOf(this.constructor, { does : traits || [] })
+                    var meta            = classWithTrait.meta
+                    meta.isDetached     = true
+                    
+                    return meta.instantiate.call(meta, thisMeta.skipTraitsAnchor, arguments)
+                }
             }
             
-            this.initialize(props)
+            thisMeta.initInstance(this, props)
+            
+            var initialize = this.initialize
+            
+            if (typeof initialize == 'function') initialize.call(this, props)
         }
     },
     
@@ -298,7 +323,8 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
         
         var superMeta = this.superClass.meta
         
-        if (this.superClass != Joose.Proto.Empty && superMeta.meta.hasMethod('does')) return superMeta.does(role)
+        // considering the case of inheriting from non-Joose classes
+        if (this.superClass != Joose.Proto.Empty && superMeta && superMeta.meta && superMeta.meta.hasMethod('does')) return superMeta.does(role)
         
         return false
     },
