@@ -8,8 +8,8 @@ Joose.Manual.Construction - Object construction with Joose
 WHERE'S THE CONSTRUCTOR?
 ========================
 
-You do not need to define a constructor method for your classes. Really. Instead, define an `initialize` method. Joose provides your classes with
-the default `initialize` method which will initialize the attributes of your class, so don't forget to call the inherited `initialize` (or use `after` modifier)
+You do not need to define a constructor method for your classes. Really. Joose provides your classes with the default constructor which will initialize the attributes of your class.
+Instead, define an `initialize` method, which will be called after all attributes were initialized.
 
 
 OBJECT CONSTRUCTION AND ATTRIBUTES
@@ -41,31 +41,39 @@ Simply define a class and you're ready to start creating objects!
             custom  : 'custom'
         })
 
-If, during construction, you'll provide a function as an initializing value, it will be assigned as-is (will not be called).
+If, during *construction*, you'll provide a function as an initializing value, it will be assigned as-is (will not be called).
 
 
 
 THE INSTANTIATION WORKFLOW
 ==========================
 
-1. `new constructor(property1, property2)`
-2. `this.BUILD(property1, property2)`
-3. `this.initialize({ name1 : property1, name2 : property2})`
+`new constructor(property1, property2)`
+
+>`var attrs = this.BUILD(property1, property2)`
+
+>`// init attributes`
+
+>`this.initialize(attrs)`
 
 When you build a class using Joose, it provides a *default constructor* for you. This constructor will perform some low-level initialization and then will call a `BUILD` method with the same arguments.
 
-`BUILD` method should return an object, which properties directly corresponds to class attributes. Default `BUILD` method just checks whether the 1st arguments passed to it is an `Object`. If so, it by-passes it to `initialize` method. 
+`BUILD` method should return an object, which properties directly corresponds to class attributes - they will be used to initialize them.
 
-Default `initialize` method uses properties of the object passed to it, for attributes initialization.
+**Important**: The order of attributes initialization is not defined. You shouldn't rely on any some attribute to be already known specific argument to be initialized  
 
-If you inherit from parent class, you need to call the inherited `initialize`, however usually you may just define an `after` modifier (see above for an example):
+Default `BUILD` method just checks whether the 1st arguments passed to it is an `Object`, if so - its returned.  
+
+The properties of the object returned from `BUILD` are used to initialize the attributes.
+
+If you inherit from parent class, you need to call the inherited `initialize`, usually you may just define an `after` modifier (see above for an example):
 
 
 CUSTOM PARAMETERS TO CONSTRUCTOR
 ================================
 
-If you need to pass the parameters to constructor in another way, override the `BUILD` method, and "normalize" the parameters, before they'll be passed to `initialize`. 
-For example, let imagine we need to define the `User` class, which will accept the `username` as 1st argument to constructor and `password` as 2nd:
+If you need to pass the parameters to constructor in another way, override the `BUILD` method, and "normalize" the parameters. 
+For example, lets imagine we need to define the `User` class, which will accept the `username` as 1st argument to constructor and `password` as 2nd:
 
         var user = new User('root', 'foobar') 
         
