@@ -6,6 +6,9 @@
     
     var bootstrap = {
         
+        VERSION             : null,
+        AUTHORITY           : null,
+        
         constructor         : Joose.Proto.Class,
         superClass          : null,
         
@@ -23,11 +26,19 @@
         BUILD : function (name, extend) {
             this.name = name
             
-            return extend || {}
+            return { __extend__ : extend || {} }
         },
         
         
-        initialize: function (extend) {
+        initialize: function (props) {
+            var extend      = props.__extend__
+            
+            this.VERSION    = extend.VERSION
+            this.AUTHORITY  = extend.AUTHORITY
+            
+            delete extend.VERSION
+            delete extend.AUTHORITY
+            
             this.c = this.extractConstructor(extend)
             
             this.adaptConstructor(this.c)
@@ -85,17 +96,28 @@
         
         
         processStem : function () {
-            var superMeta = this.superClass.meta
+            // '|| {}' for non-Joose superclasses
+            var superMeta = this.superClass.meta || {}
             
-            this.methods        = Joose.O.getMutableCopy(superMeta.methods)
-            this.attributes     = Joose.O.getMutableCopy(superMeta.attributes)
+            this.methods        = Joose.O.getMutableCopy(superMeta.methods || {})
+            this.attributes     = Joose.O.getMutableCopy(superMeta.attributes || {})
         },
         
+        
+        initInstance : function (instance, props) {
+            Joose.O.copyOwn(props, instance)
+        },
         
         
         defaultConstructor: function () {
             return function () {
-                this.initialize(this.BUILD.apply(this, arguments))
+                var args = this.BUILD.apply(this, arguments)
+                
+                this.meta.initInstance(this, args)
+                
+                var initialize = this.initialize
+                
+                if (typeof initialize == 'function') initialize.call(this, args)
             }
         },
         
@@ -115,8 +137,8 @@
         
         adaptPrototype: function (proto) {
             //this will fix weird semantic of native "constructor" property to more intuitive (idea borrowed from Ext)
-            proto.constructor = this.c
-            proto.meta = this
+            proto.constructor   = this.c
+            proto.meta          = this
         },
         
         
@@ -181,8 +203,9 @@
     
     
         subClassOf : function (classObject, extend) {
-            extend = extend || {}
-            extend.isa = classObject || this.c
+            extend      = extend || {}
+            extend.isa  = classObject || this.c
+            
             return new this.constructor(null, extend).c
         },
         
