@@ -2,7 +2,4 @@ Joose.Proto = function () { throw "Modules may not be instantiated." }
 
 Joose.Proto.Empty = function () { throw "Joose.Proto.Empty can't be instantiated" }
     
-Joose.Proto.Empty.meta = {
-    methods     : {},
-    attributes  : {}
-}
+Joose.Proto.Empty.meta = {}
