@@ -37,8 +37,7 @@
         },
         
         
-        initialize: function (props) {
-            Joose.O.copyOwn(props, this)
+        initialize: function () {
         },
         
         
