@@ -1,8 +1,10 @@
 Joose = function () { throw "Modules may not be instantiated." }
 
-Joose.top = this
+Joose.top           = this
 
-Joose.VERSION = 3.007
+Joose.VERSION       = 3.007
+Joose.AUTHORITY     = 'jsan:NPLATONOV'
+
 
 // Static helpers for Arrays
 Joose.A = {
@@ -175,10 +177,7 @@ Joose.Proto = function () { throw "Modules may not be instantiated." }
 
 Joose.Proto.Empty = function () { throw "Joose.Proto.Empty can't be instantiated" }
     
-Joose.Proto.Empty.meta = {
-    methods     : {},
-    attributes  : {}
-};
+Joose.Proto.Empty.meta = {};
 (function () {
 
     Joose.Proto.Object = function () {
@@ -218,8 +217,7 @@ Joose.Proto.Empty.meta = {
         },
         
         
-        initialize: function (props) {
-            Joose.O.copyOwn(props, this)
+        initialize: function () {
         },
         
         
@@ -247,6 +245,9 @@ Joose.Proto.Empty.meta = {
     
     var bootstrap = {
         
+        VERSION             : null,
+        AUTHORITY           : null,
+        
         constructor         : Joose.Proto.Class,
         superClass          : null,
         
@@ -264,11 +265,19 @@ Joose.Proto.Empty.meta = {
         BUILD : function (name, extend) {
             this.name = name
             
-            return extend || {}
+            return { __extend__ : extend || {} }
         },
         
         
-        initialize: function (extend) {
+        initialize: function (props) {
+            var extend      = props.__extend__
+            
+            this.VERSION    = extend.VERSION
+            this.AUTHORITY  = extend.AUTHORITY
+            
+            delete extend.VERSION
+            delete extend.AUTHORITY
+            
             this.c = this.extractConstructor(extend)
             
             this.adaptConstructor(this.c)
@@ -326,17 +335,28 @@ Joose.Proto.Empty.meta = {
         
         
         processStem : function () {
-            var superMeta = this.superClass.meta
+            // '|| {}' for non-Joose superclasses
+            var superMeta = this.superClass.meta || {}
             
-            this.methods        = Joose.O.getMutableCopy(superMeta.methods)
-            this.attributes     = Joose.O.getMutableCopy(superMeta.attributes)
+            this.methods        = Joose.O.getMutableCopy(superMeta.methods || {})
+            this.attributes     = Joose.O.getMutableCopy(superMeta.attributes || {})
         },
         
+        
+        initInstance : function (instance, props) {
+            Joose.O.copyOwn(props, instance)
+        },
         
         
         defaultConstructor: function () {
             return function () {
-                this.initialize(this.BUILD.apply(this, arguments))
+                var args = this.BUILD.apply(this, arguments)
+                
+                this.meta.initInstance(this, args)
+                
+                var initialize = this.initialize
+                
+                if (typeof initialize == 'function') initialize.call(this, args)
             }
         },
         
@@ -356,8 +376,8 @@ Joose.Proto.Empty.meta = {
         
         adaptPrototype: function (proto) {
             //this will fix weird semantic of native "constructor" property to more intuitive (idea borrowed from Ext)
-            proto.constructor = this.c
-            proto.meta = this
+            proto.constructor   = this.c
+            proto.meta          = this
         },
         
         
@@ -422,8 +442,9 @@ Joose.Proto.Empty.meta = {
     
     
         subClassOf : function (classObject, extend) {
-            extend = extend || {}
-            extend.isa = classObject || this.c
+            extend      = extend || {}
+            extend.isa  = classObject || this.c
+            
             return new this.constructor(null, extend).c
         },
         
@@ -1694,12 +1715,16 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
     isDetached                  : false,
     firstPass                   : true,
     
+    // a special instance, which, when passed as 1st argument to constructor, signifies that constructor should
+    // skips traits processing for this instance
     skipTraitsAnchor            : {},
     
     
     //build for metaclasses - collects traits from roles
     BUILD : function () {
-        var props = Joose.Managed.Class.superClass.BUILD.apply(this, arguments)
+        var sup = Joose.Managed.Class.superClass.BUILD.apply(this, arguments)
+        
+        var props   = sup.__extend__
         
         var traits = Joose.O.wantArray(props.trait || props.traits || [])
         delete props.trait
@@ -1709,35 +1734,56 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
             var role = (arg.meta instanceof Joose.Managed.Class) ? arg : arg.role
             
             if (role.meta.meta.isDetached) traits.push(role.meta.constructor)
-        }, this)
+        })
         
         if (traits.length) props.traits = traits 
         
-        return props
+        return sup
     },
     
     
+    initInstance : function (instance, props) {
+        Joose.O.each(this.attributes, function (attribute, name) {
+            
+            if (attribute instanceof Joose.Managed.Attribute) 
+                attribute.initFromConfig(instance, props)
+            else 
+                if (props.hasOwnProperty(name)) instance[name] = props[name]
+        })
+    },
+    
+    
+    // we are using the same constructor for usual and meta- classes
     defaultConstructor: function () {
         return function (skipTraitsAnchor, params) {
-            var skipTraits = skipTraitsAnchor == this.meta.skipTraitsAnchor
+            var thisMeta    = this.meta
+            var skipTraits  = skipTraitsAnchor == thisMeta.skipTraitsAnchor
             
-            var props = this.BUILD.apply(this, skipTraits ? params : arguments)
+            var props   = this.BUILD.apply(this, skipTraits ? params : arguments)
+            // either looking for traits in __extend__ (meta-class) or in usual props (usual class)
+            var extend  = props.__extend__ || props
             
-            var traits = props.trait || props.traits
-            delete props.trait
-            delete props.traits
+            var traits = extend.trait || extend.traits
             
-            if ((traits || props.detached) && !skipTraits) {
-                delete props.detached
+            if (traits || extend.detached) {
+                delete extend.trait
+                delete extend.traits
+                delete extend.detached
                 
-                var classWithTrait = this.meta.subClassOf(this.constructor, { does : traits || [] })
-                var meta = classWithTrait.meta
-                meta.isDetached = true
-                
-                return meta.instantiate.call(meta, this.meta.skipTraitsAnchor, arguments)
+                if (!skipTraits) {
+                    var classWithTrait  = thisMeta.subClassOf(this.constructor, { does : traits || [] })
+                    var meta            = classWithTrait.meta
+                    meta.isDetached     = true
+                    
+                    return meta.instantiate.call(meta, thisMeta.skipTraitsAnchor, arguments)
+                }
             }
             
-            this.initialize(props)
+            thisMeta.initInstance(this, props)
+            
+            var initialize = this.initialize
+            
+            if (typeof initialize == 'function') initialize.call(this, props)
         }
     },
     
@@ -1979,7 +2025,8 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
         
         var superMeta = this.superClass.meta
         
-        if (this.superClass != Joose.Proto.Empty && superMeta.meta.hasMethod('does')) return superMeta.does(role)
+        // considering the case of inheriting from non-Joose classes
+        if (this.superClass != Joose.Proto.Empty && superMeta && superMeta.meta && superMeta.meta.hasMethod('does')) return superMeta.does(role)
         
         return false
     },
@@ -2467,14 +2514,16 @@ Joose.Namespace.Able = new Joose.Managed.Role('Joose.Namespace.Able', {
 }).c;
 Joose.Managed.Bootstrap = new Joose.Managed.Role('Joose.Managed.Bootstrap', {
     
-    does   : [ Joose.Namespace.Able, Joose.Managed.My, Joose.Managed.Attribute.Builder ],
+    does   : [ Joose.Namespace.Able, Joose.Managed.My, Joose.Managed.Attribute.Builder ]
     
-    before : {
-        
-        initialize : function () {
-            Joose.Meta.Object.prototype.initialize.call(this, {})    
-        }
-    }
+//    ,
+//    
+//    before : {
+//        
+////        initialize : function () {
+////            Joose.Meta.Object.prototype.initialize.call(this, {})    
+////        }
+//    }
 
 }).c
 ;
@@ -2483,19 +2532,7 @@ Joose.Meta = function () { throw "Modules may not be instantiated." }
 
 Joose.Meta.Object = new Joose.Proto.Class('Joose.Meta.Object', {
     
-    isa             : Joose.Proto.Object,
-    
-    initialize : function (config) {
-            
-        Joose.O.each(this.meta.attributes, function (attribute, name) {
-            
-            if (attribute instanceof Joose.Managed.Attribute) 
-                attribute.initFromConfig(this, config)
-            else 
-                if (config.hasOwnProperty(name)) this[name] = config[name]
-            
-        }, this)
-    }
+    isa             : Joose.Proto.Object
     
 }).c;
 Joose.Meta.Class = new Joose.Managed.Class('Joose.Meta.Class', {
