@@ -5,8 +5,12 @@
     - Class/Role/Module in the global scope aliased as Joose.Class/Joose.Role/Joose.Module
     - Joose no longer overwrites the Class/Role/Module symbols in global scope (should allow Prototype support)
     - Static instance ('my') now receives a special 'HOST' configuration parameter during instantiation, containing a hosting class constructor
-    - returning 'false' from Joose.A/O.each stops the iteration
-    - added `Joose.A.map` helper 
+    - returning 'false' from Joose.A/O.each iterators stops the iteration and can be propagated further 
+    - added `Joose.A.map` helper
+    - attributes initialization moved from `initialize` method to constructor, this don't break the previous behavior 
+        (which was somewhat restrictive - only `after` ) and allows:
+            1) the `before` modifier for `initialize` with already initialized attributes
+            2) better support for inheriting from non-Joose classes (which may not have `initialize` at all)
     
     
     [BUG FIXES]
